[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://fontes/DTM-Mono.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fontes/Butoons.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.101961 )

[sub_resource type="Theme" id=2]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 2 )

[node name="pause_menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.145098 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 111.0
margin_top = 68.0
margin_right = 209.0
margin_bottom = 172.0
custom_constants/separation = 5

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 21.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Pausado"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 98.0
margin_bottom = 26.0

[node name="Resmuir" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 98.0
margin_bottom = 52.0
theme = ExtResource( 3 )
text = "Resumir"

[node name="Menu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 98.0
margin_bottom = 78.0
theme = ExtResource( 3 )
text = "Menu"

[node name="Sair" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 83.0
margin_right = 98.0
margin_bottom = 104.0
theme = ExtResource( 3 )
text = "Sair do jogo"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resmuir" to="." method="_on_Resmuir_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Sair" to="." method="_on_Sair_pressed"]
